# LolOCRPipeline

./: README.md  pyproject.toml
configs/: example.yaml  landmarks.json
src/atlas_ocr/: calibrate.py  cli.py  pipeline.py
src/atlas_ocr/capture/: live.py  video.py
src/atlas_ocr/cv/: ocr_engine.py  preprocess.py
src/atlas_ocr/insights/: rules.py
src/atlas_ocr/io/: config.py
src/atlas_ocr/models/: schema.py
src/atlas_ocr/utils/: time_utils.py
tests/: test_calibrate_output.py  test_config.py  test_rules.py  test_sample_frame_integration.py  test_time_utils.py
tests/fixtures/: README.md  sample_frame_config.yaml  sample_frame_expected.json
