[project]
name = "atlas-replay-ocr"
version = "0.1.0"
description = "OCR/CV pipeline for League replay coaching insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opencv-python>=4.10.0",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "pytesseract>=0.3.10",
  "mss>=9.0.1",
  "pyyaml>=6.0.2",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
atlas-ocr = "atlas_ocr.cli:app"
atlas-calibrate = "atlas_ocr.calibrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "integration: tests that require local sample frame fixtures",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]


[tool.hatch.build.targets.wheel]
packages = ["src/atlas_ocr"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/pyproject.toml",
  "/configs",
]
